@@ -5,6 +5,11 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 18-02-2006 fixed: Possible crashes in charset conversion.
+ - 18-02-2006 changed: MultiImage only reads dir once instead of whenever it becomes visible.
+ - 18-02-2006 fixed: Radiobutton nofocus image wasn't resized correctly (Thanks Nuka1195).
+ - 18-02-2006 fixed: Volume and Seekbars could disappear and not reappear on switch from Fullscreen -> GUI.
+ - 18-02-2006 fixed: WindowClose animations on DialogSelect and SettingsCategory windows.
  - 17-02-2006 changed: Update database -> Rescan database in strings.xml
  - 17-02-2006 fixed: my programs. don't try to launch nonexisting entries.
  - 17-02-2006 added: <radiowidth>, <radioheight>, <radioposx>, <radioposy> tags to radiobuttons.
